Fix issues
Fixed button text overflowing, text card overflowing, and no data pokemon list

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -100,9 +100,14 @@
     margin: 4px;
   }
 
+  .card-link {
+    width: auto;
+  }
+
   .button {
     padding: 8px;
     margin: 8px;
+    flex-direction: column;
   }
 
   .card-button-text {
